[gd_scene load_steps=3 format=3 uid="uid://ci1wng1hwtcec"]

[ext_resource type="Script" uid="uid://b2jmawcoy8coq" path="res://ui/mixer/mixer.gd" id="1_kcgyy"]
[ext_resource type="Theme" uid="uid://5wwgiimot5nw" path="res://theme/new_theme.tres" id="2_kcgyy"]

[node name="Mixer" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = -57.0
offset_right = 54.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcgyy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -27.5
offset_right = 158.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_kcgyy")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Audio settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Master"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true

[node name="EffectsVolumeLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Effects"

[node name="EffectsVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true

[node name="MusicVolumeLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true

[node name="DoneButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Done"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/GridContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/GridContainer/EffectsVolumeSlider" to="." method="_on_effects_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/GridContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DoneButton" to="." method="_on_done_button_pressed"]
